<resources>
    <string name="hello">Hello World, TUMCampus!</string>
    <string name="lang">eng</string>
    <string name="app_info_text">        TUM Campus App -EXPERIMENTAL-\n
        \n
        by Christoph Richter, Thomas Bley (Android Praktikum SS2011)
        and
        Vincenz Dölle, Daniel Mayr, Thomas Behrens (Android Praktikum WS2011/12)\n
        and 
        Florian Schulz, Vasyl Malinskyi (Android Praktikum SS2012)
		\nThis is an esperimental version introducing all the new Features from the last.
        You are using this version at your own risk (no responsibility). There is no support for this app.\n
        \nThis app was developed as part of the Android lab course.\n
		In cooperation with:\n
		TUM, faculty for Informatics\n
		Chair 13, Prof. Dr. Uwe Baumgarten\n
		Boltzmannstr. 3\n
		85748 Garching bei München\n
		\n
		Support:\n
		http://code.google.com/p/tum-campus/issues/list\n
		\n
		Homepage, Source-Code:\n
		http://code.google.com/p/tum-campus\n
		\n
		TUM Campus App at Facebook:\n
		https://www.facebook.com/TUMCampus\n
		\n
		Source-Code licences:\n
		GNU GPL v3 oder New BSD License\n
		http://www.gnu.org/licenses/gpl.html\n
		http://www.opensource.org/licenses/bsd-license.php\n
		\n
		Protection of privacy:\n
		The application only saves individual-related\n
		data, if the user explicit enters some\n
		or imports them manually from TUMOnline or an SD-card \n
		(ex. marks, lectures).\n
		The application transmits no individual-rated\n
		data except such that are needed for communication \n
		with the TUMOnline API (ex. AccessToken).
		No usage statistics is transmitted to third parties.</string>
    <string name="tumonline_password_word">TUMOnline password</string>
    <string name="tumonline_lrz_id">LRZ identification</string>
    <string name="tumonline_access_token_word">TUMOnline access token</string>
    <string name="modules">modules</string>
    <string name="modules_act_deact">activate, deactivate</string>
    <string name="tumonline_summary">e.g. access token settings</string>
    <string name="mensa_filter">Mensa filter</string>
    <string name="mensa_settings_info">e.g. "Garching" to list only the dining halls in Garching</string>
    <string name="silence_phone">Phone atomatic. silently</string>
    <string name="silence_phone_info">during the lecture</string>
    <string name="debug_for_developer">for developers</string>
    <string name="debug_mode">debug mode</string>
    <string name="market">Google Play</string>
    <string name="market_info">Rate or update TUM Campus</string>
    <string name="app_management">App management</string>
    <string name="app_management_info">Delete data or deinstall app</string>
    <string name="choose_mensa">Please select a university canteen.</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_study_plan">Choose study plan</string>
    <string name="debug_syncs">syncs</string>
    <string name="debug_cafeterias">cafeterias</string>
    <string name="debug_cafeterias_menus">cafeterias_menus</string>
    <string name="debug_feeds">feeds</string>
    <string name="debug_feeds_items">feeds_items</string>
    <string name="debug_links">links</string>
    <string name="debug_events">events</string>
    <string name="debug_news">news</string>
    <string name="debug_lectures">lectures</string>
    <string name="debug_lectures_items">lecture_items</string>
    <string name="debug_locations">locations</string>
    <string name="debug_time">time</string>
    <string name="debug_master">master</string>
    <string name="choose_doc">Choose document:</string>
    <string name="past_events">Past events</string>
    <string name="url">URL</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="choose_feed">Choose feed</string>
    <string name="insert_search">Insert search text</string>
    <string name="search">Search</string>
    <string name="grade_overview">List of all exams with grades:</string>
    <string name="semester">Semester</string>
    <string name="examiner">Examiner</string>
    <string name="mode">Mode</string>
    <string name="choose_category">Select category</string>
    <string name="lec_details_title">Introduction into course title</string>
    <string name="lec_dates">Lecture dates</string>
    <string name="lec_details">Details</string>
    <string name="semester_data">Semester data</string>
    <string name="sws_number">Number of semester periods per week</string>
    <string name="lecture_begin">Lecture begin</string>
    <string name="first_date">First lecture date</string>
    <string name="lec_contributors">Lecture contributors</string>
    <string name="lecturer">Lecturer</string>
    <string name="organisation_of_lecture">Organization</string>
    <string name="lec_content">Lecture content</string>
    <string name="teaching_content">Teaching content</string>
    <string name="lec_method">Method</string>
    <string name="lec_method_details">Method details</string>
    <string name="lec_target">Targets</string>
    <string name="teaching_target">Teaching target</string>
    <string name="examination_aids">Examination aids</string>
    <string name="literature">Literature</string>
    <string name="next_lectures">Next lectures:</string>
    <string name="slide_lectures">Lectures</string>
    <string name="tumonline_settings">TUMOnline settings</string>
    <string name="import_lectures_from_sd_card">Import lectures from SD-card</string>
    <string name="import_lectures_from_tumonline">Import lectures from TUMOnline</string>
    <string name="import_links">Import links</string>
    <string name="import_rss_feed">Import RSS-Feeds</string>
    <string name="howto_import_lectures">How to import lectures from SD-card:\n
		1. Plug your phone to your computer (USB)\n
		2. Activate your phone as USB-memory\n
		3. Log into TUMOnline on your PC:\n
		    \tclick on \'Terminkalender\'\n
		    \tclick on \'Export\'\n
		    \tselect \'Download als CSV für Excel\'\n
		    \tclick on \'Download\'\n
		    \tsave file at &lt;SD-card&gt;\\tumcampus\\lectures\n
		    \tsave\n
		    \tperhaps you have to rework the file with a program like Excel\n
		4. Deactivate the USB-memory function of your phone\n
		5. Click at the top of this site on \'Import lectures from SD-card\'\n</string>
    <string name="howto_import_rss_feed">How to import RSS-Feeds:\n
		1. Plug your phone to your computer (USB)\n
		2. Activate your phone as USB-memory\n
		3. Take a RSS-URL out of your\n
		    PC-Browser into the directory\n
		    &lt;SD-card&gt;\\tumcampus\\rss\n
		    in the Windows Explorer\n
		4. Deactivate the USB-memory function of your phone\n
		5. Click at the top of this site on \'Import RSS-Feeds\'</string>
    <string name="import_hint">Warning: existing data won\'t be\n
		deleted, but possibly overwritten!</string>
    <string name="data_and_settings">Data and settings</string>
    <string name="tum_logo">TUM Logo</string>
    <string name="initial_download">Start: First time data download!</string>
    <string name="organisation_caption">organization</string>
    <string name="zoom_hint">tap two times on the plan to zoom in</string>
    <string name="choose_plan">Choose plan</string>
    <string name="search_caption">Search term:</string>
    <string name="search_help">Name or Keyword</string>
    <string name="choose_person">Select a person:</string>
    <string name="choose_station">Please choose a station.</string>
    <string name="saved_stations">Saved stations:</string>
    <string name="search_station">Search station</string>
    <string name="generate_token">Generate Access Token</string>
    <string name="howto">HowTo</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report!</string>
    <string name="crash_notif_title">TUMCampus has crashed!</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="crash_dialog_text">Please send an report to the developers!</string>
    <string name="crash_dialog_title">An error occured.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="roomfinder_install">Please install the TUM Roomfinder App!</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="lectures">Lectures</string>
    <string name="person_search">Person Search</string>
    <string name="organisations">Organizations</string>
    <string name="grades">Grades</string>
    <string name="documents">Documents</string>
    <string name="study_plans">Study Plans</string>
    <string name="tuition_fees">Tuition Fees</string>
    <string name="menues">Cafeterias</string>
    <string name="mvv">MVV</string>
    <string name="rss_feeds">RSS-Feeds</string>
    <string name="events">Events</string>
    <string name="area_maps">Area Maps</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="news">News</string>
    <string name="links">Links</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_link">https://m.facebook.com/TUMCampus</string>
    <string name="gallery">Gallery</string>
    <string name="app_info">App-Info</string>
    <string name="debug">Debug</string>
    <string name="all">All</string>
    <string name="all_programs">All programs</string>
    <string name="grades_get_fetched">Fetching grades…</string>
    <string name="semester_w">Winter semester</string>
    <string name="semester_s">Summer semester</string>
    <string name="semester_n">Not found</string>
    <string name="date">Date</string>
    <string name="no_person_set">No person set!</string>
    <string name="kitchen_opening">Kitchen opening</string>
    <string name="prices">Prices</string>
    <string name="open_study_plan_for">Open study plan for</string>
    <string name="informatics_bachelor">Informatics Bachelor</string>
    <string name="business_informatics_bachelor_1112">Business Informatics Bachelor WS1112</string>
    <string name="business_informatics_bachelor_0809">Business Informatics Bachelor WS0809</string>
    <string name="bioinformatics_bachelor">Bioinformatics Bachelor</string>
    <string name="games_engineering_bachelor">Games Engineering Bachelor</string>
    <string name="informatics_master">Informatics Master</string>
    <string name="business_informatics_master">Business Informatics Master</string>
    <string name="bioinformatics_master">Bioinformatics Master</string>
    <string name="automotive_master">Automotive SE Master</string>
    <string name="computational_science_master">Computational Science and Engineering</string>
    <string name="certificate_of_matriculation">Confirmation of enrollment</string>
    <string name="study_status">Study status</string>
    <string name="confirmation_about_payment">Confirmation about payment</string>
    <string name="load_doc">Load document?</string>
    <string name="roomfinder">Roomfinder</string>
    <string name="user_data">User data</string>
    <string name="tumonline_password">Password for TUMOnline</string>
    <string name="tumonline_access_token">Access token for TUMOnline</string>
    <string name="lrz_id">LRZ login\nz.B. go42tum"</string>
    <string name="export_events">Export Events to Calendar</string>
    <string name="lectures_found">choose a found lecture:</string>
    <string name="choose_calendar">choose a Google Calendar:</string>
    <string name="calendarexport">Here you can export all your inserted lectures to a Google Calendar. To do so, select the right Google Calendar below and click on the button to export, then all lectures you have imported to TUMCampus App will appear in your Google Calendar as well.</string>
    <string name="chooseReminder">choose a reminder:</string>
</resources>