<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="tumonline"
        android:summary="z.B. Access-Token-Einstellungen"
        android:title="TUMOnline Einstellungen" />

    <!-- TODO Review Vasyl => Flo changed Constants for List -->
    <PreferenceScreen
        android:key="modules"
        android:summary="aktivieren, deaktivieren"
        android:title="Module" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/lectures"
            android:title="@string/lectures" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/person_search"
            android:title="@string/person_search" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/organisations"
            android:title="@string/organisations" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/grades"
            android:title="@string/grades" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/documents"
            android:title="@string/documents" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/study_plans"
            android:title="@string/study_plans" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/tuition_fees"
            android:title="@string/tuition_fees" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/menues"
            android:title="@string/menues" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/mvv"
            android:title="@string/mvv" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/rss_feeds"
            android:title="@string/rss_feeds" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/events"
            android:title="@string/events" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/gallery"
            android:title="@string/gallery" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/area_maps"
            android:title="@string/area_maps" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/roomfinder"
            android:title="@string/roomfinder" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/opening_hours"
            android:title="@string/opening_hours" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/news"
            android:title="@string/news" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/links"
            android:title="@string/links" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/facebook"
            android:title="@string/facebook" />
    </PreferenceScreen>

    <EditTextPreference
        android:key="cafeteriaFilter"
        android:summary="z.B. &apos;Garching&apos; um nur Mensen in Garching auflisten"
        android:title="Mensa-Filter" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="silence"
        android:summary="während der Vorlesung"
        android:title="Handy autom. lautlos" />
    <!-- TODO check const -->
    <CheckBoxPreference
        android:key="debug"
        android:summary="für Entwickler"
        android:title="Debug-Modus" />

    <Preference
        android:key="market"
        android:summary="TUM Campus bewerten oder aktualisieren"
        android:title="Android Market" />
    <Preference
        android:key="app_details"
        android:summary="Daten löschen oder App deinstallieren"
        android:title="App-Verwaltung" />

</PreferenceScreen>