<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#0065BD" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

    <TextView
        android:id="@+id/tvExportExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarexport"
        android:padding="4dip"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#0065BD" android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/tvExplainCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_calendar" android:textColor="#FFFFFF"/>

    <Spinner
        android:id="@+id/spinCalendar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvReminderCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseReminder" android:textColor="#FFFFFF"/>

    <SeekBar
        android:id="@+id/sbReminder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Export:" android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/btnToCalendar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_events"
        android:textColor="#2546A4" />
	
</LinearLayout>