<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#0065BD" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_caption" android:textColor="#FFFFFF"/>
		
    <EditText android:id="@+id/etFindQuery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/insert_search"
        android:imeActionLabel="Search"
        android:imeOptions="actionSearch">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lectures_found" android:textColor="#FFFFFF"/>
    
	<ListView android:id="@+id/lvFound" 
	    android:layout_height="0dip" android:layout_width="fill_parent" 
		android:scrollbars="vertical" android:layout_weight="51"
		android:layout_marginBottom="6dip" android:padding="4dip"
		android:background="#FFFFFF" />
	
</LinearLayout>